--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -792,6 +792,7 @@ allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 202.182.99.129;
 allow 202.61.226.98;
+allow 202.94.246.201;
 allow 204.137.14.104;
 allow 204.137.14.105;
 allow 204.137.14.106;
@@ -1338,6 +1339,7 @@ allow 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
@@ -1472,6 +1474,7 @@ allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.174.106;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1605,6 +1608,7 @@ allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
 allow 5.61.51.143;
+allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.84.146;
@@ -1726,6 +1730,7 @@ allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
+allow 95.168.173.143;
 allow 95.211.174.137;
 allow 95.211.244.28;
 allow 96.126.98.146;
