--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -792,6 +792,7 @@ deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 deny 202.182.99.129;
 deny 202.61.226.98;
+deny 202.94.246.201;
 deny 204.137.14.104;
 deny 204.137.14.105;
 deny 204.137.14.106;
@@ -1338,6 +1339,7 @@ deny 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
@@ -1472,6 +1474,7 @@ deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.174.106;
 deny 45.134.225.36;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1605,6 +1608,7 @@ deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
 deny 5.61.51.143;
+deny 5.79.66.19;
 deny 62.133.45.2;
 deny 62.171.137.169;
 deny 62.182.84.146;
@@ -1726,6 +1730,7 @@ deny 94.75.225.81;
 deny 95.128.43.164;
 deny 95.142.161.63;
 deny 95.143.193.125;
+deny 95.168.173.143;
 deny 95.211.174.137;
 deny 95.211.244.28;
 deny 96.126.98.146;
