--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -190,6 +190,7 @@ deny 172.81.131.110;
 deny 172.81.131.139;
 deny 172.81.131.156;
 deny 172.81.132.94;
+deny 172.93.49.243;
 deny 173.0.3.111;
 deny 173.237.206.68;
 deny 173.249.57.253;
@@ -200,7 +201,6 @@ deny 176.121.81.51;
 deny 176.58.100.98;
 deny 176.58.121.177;
 deny 176.97.114.202;
-deny 178.162.175.5;
 deny 178.162.197.91;
 deny 178.17.170.144;
 deny 178.17.170.23;
@@ -841,7 +841,9 @@ deny 23.137.250.83;
 deny 23.137.253.108;
 deny 23.137.253.109;
 deny 23.137.253.110;
+deny 23.137.253.254;
 deny 23.137.253.27;
+deny 23.137.254.137;
 deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.154.177.10;
@@ -875,6 +877,7 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.8.104;
+deny 23.184.48.254;
 deny 23.184.48.78;
 deny 23.236.122.193;
 deny 23.94.211.25;
@@ -904,16 +907,20 @@ deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
+deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
 deny 2602:fc24:18:f38f::1;
+deny 2602:fc24:18:f84a::1;
 deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:30::1;
+deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
 deny 2602:fef9:100:1100::199;
+deny 2602:ff16:3:0:1:3c0:0:1;
 deny 2604:2dc0:101:200::162b;
 deny 2604:2dc0:101:200::1dd3;
 deny 2604:2dc0:202:300::ed3;
@@ -1567,7 +1574,6 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.206;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.102.89;
 deny 5.255.103.235;
 deny 5.255.104.202;
