--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -31,6 +31,7 @@ allow 104.244.78.233;
 allow 104.244.79.44;
 allow 104.244.79.50;
 allow 104.244.79.61;
+allow 107.170.61.199;
 allow 107.172.31.218;
 allow 107.174.138.172;
 allow 107.174.146.25;
@@ -183,7 +184,6 @@ allow 172.81.131.110;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
-allow 172.93.49.243;
 allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.249.57.253;
@@ -618,7 +618,6 @@ allow 193.32.162.96;
 allow 193.36.132.21;
 allow 193.36.38.126;
 allow 193.70.80.213;
-allow 194.147.35.199;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
@@ -910,7 +909,6 @@ allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
-allow 2602:ff16:3:0:1:3c0:0:1;
 allow 2604:2dc0:101:200::162b;
 allow 2604:2dc0:101:200::1dd3;
 allow 2604:2dc0:202:300::ed3;
@@ -1022,6 +1020,7 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
+allow 2a01:4f9:c012:ee09::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1029,6 +1028,7 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
@@ -1450,11 +1450,13 @@ allow 37.187.74.97;
 allow 37.228.129.128;
 allow 37.228.129.5;
 allow 37.228.129.63;
+allow 37.27.218.26;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 3.76.125.118;
 allow 38.97.116.244;
 allow 4.189.65.75;
+allow 45.11.229.132;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1538,6 +1540,7 @@ allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.255;
 allow 46.165.243.36;
+allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 47.243.99.161;
