--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -89,6 +89,7 @@ allow 109.120.157.137;
 allow 109.169.33.163;
 allow 109.199.101.106;
 allow 109.199.101.134;
+allow 109.199.105.142;
 allow 109.228.160.26;
 allow 109.69.67.17;
 allow 109.70.100.1;
@@ -801,6 +802,7 @@ allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
+allow 209.135.168.90;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
@@ -838,7 +840,6 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
-allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
@@ -897,6 +898,7 @@ allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
+allow 2602:f9f3:0:2::319;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
@@ -1029,7 +1031,6 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
@@ -1042,6 +1043,7 @@ allow 2a02:c206:2239:9861::1;
 allow 2a02:c206:2240:3516::1;
 allow 2a02:c206:2240:5051::1;
 allow 2a02:c206:2240:5054::1;
+allow 2a02:c206:2240:5264::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
@@ -1443,7 +1445,6 @@ allow 31.133.0.210;
 allow 31.172.78.158;
 allow 31.220.75.237;
 allow 3.14.249.60;
-allow 3.14.5.3;
 allow 35.0.127.52;
 allow 37.120.239.59;
 allow 37.187.5.192;
@@ -1518,6 +1519,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -1540,7 +1542,6 @@ allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.255;
 allow 46.165.243.36;
-allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 47.243.99.161;
