--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -128,6 +128,7 @@ deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
+deny 2602:f9f3:0:2::319;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
@@ -259,7 +260,6 @@ deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:48b::1;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
@@ -272,6 +272,7 @@ deny 2a02:c206:2239:9861::1;
 deny 2a02:c206:2240:3516::1;
 deny 2a02:c206:2240:5051::1;
 deny 2a02:c206:2240:5054::1;
+deny 2a02:c206:2240:5264::1;
 deny 2a02:c207:3002:8283::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
