--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -89,6 +89,7 @@ set_real_ip_from 109.120.157.137;
 set_real_ip_from 109.169.33.163;
 set_real_ip_from 109.199.101.106;
 set_real_ip_from 109.199.101.134;
+set_real_ip_from 109.199.105.142;
 set_real_ip_from 109.228.160.26;
 set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
@@ -801,6 +802,7 @@ set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
 set_real_ip_from 205.185.124.193;
 set_real_ip_from 205.185.127.231;
+set_real_ip_from 209.135.168.90;
 set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
 set_real_ip_from 209.141.37.94;
@@ -838,7 +840,6 @@ set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
-set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
@@ -897,6 +898,7 @@ set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e5::104;
+set_real_ip_from 2602:f9f3:0:2::319;
 set_real_ip_from 2602:fc24:10:61b::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
@@ -1029,7 +1031,6 @@ set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
-set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:2b88:2:48b::1;
 set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
@@ -1042,6 +1043,7 @@ set_real_ip_from 2a02:c206:2239:9861::1;
 set_real_ip_from 2a02:c206:2240:3516::1;
 set_real_ip_from 2a02:c206:2240:5051::1;
 set_real_ip_from 2a02:c206:2240:5054::1;
+set_real_ip_from 2a02:c206:2240:5264::1;
 set_real_ip_from 2a02:c207:3002:8283::1;
 set_real_ip_from 2a02:ec0:209:10::4;
 set_real_ip_from 2a02:ed06::222;
@@ -1443,7 +1445,6 @@ set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.172.78.158;
 set_real_ip_from 31.220.75.237;
 set_real_ip_from 3.14.249.60;
-set_real_ip_from 3.14.5.3;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.239.59;
 set_real_ip_from 37.187.5.192;
@@ -1518,6 +1519,7 @@ set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
+set_real_ip_from 45.83.21.193;
 set_real_ip_from 45.84.107.101;
 set_real_ip_from 45.84.107.172;
 set_real_ip_from 45.84.107.182;
@@ -1540,7 +1542,6 @@ set_real_ip_from 45.95.169.228;
 set_real_ip_from 45.95.169.229;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.165.243.36;
-set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 47.243.99.161;
