--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -227,6 +227,7 @@ set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
 set_real_ip_from 18.197.157.85;
 set_real_ip_from 18.236.178.175;
+set_real_ip_from 184.75.223.227;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
 set_real_ip_from 185.100.85.23;
@@ -841,6 +842,7 @@ set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
+set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
 set_real_ip_from 23.154.177.16;
@@ -1560,6 +1562,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.206;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.102.89;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
